Bug 1426869 - td.contenteditable=true focus breaks text selection. r=masayuki, a=RyanVM